[package]
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["data-structures", "game-engines", "no-std"]
description = "A fast, minimal, and ergonomic entity-component-system"
edition = "2018"
keywords = ["ecs", "entity"]
license = "MIT OR Apache-2.0"
name = "hecs"
readme = "README.md"
repository = "https://github.com/Ralith/hecs"
version = "0.3.1"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["std"]
std = []
# Enables derive(Bundle)
clone = []
macros = ["hecs-macros", "lazy_static"]

[dependencies]
hashbrown = {version = "0.9.0", default-features = false, features = ["ahash", "inline-more"]}
hecs-macros = {path = "macros", version = "0.4.0", optional = true}
lazy_static = {version = "1.4.0", optional = true, features = ["spin_no_std"]}
serde = {version = "1.0.117", default-features = false, optional = true}

[dev-dependencies]
bencher = "0.1.5"
rand = "0.7.3"
serde = {version = "1.0.117", features = ["derive"]}
serde_test = "1.0.117"
trybuild = "1.0.23"

[[bench]]
harness = false
name = "bench"
required-features = ["macros"]

[profile.release]
debug = true

[workspace]
members = ["macros"]
